# esa-pyxel

./: .bandit  .codespellrc  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci-doc.yml  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  EMCCD_simulation.py  HOW_TO_RELEASE.md  LICENSE  LICENSE.txt  MANIFEST.in  README.css  README.md  README.rst  badges.py  development.md  doc8.ini  docker-compose.yml  environment.yml  exposure6.yaml  kubernetes.yaml  mypy.ini  pages.rst  pylint.cfg  pyproject.toml  pytest.ini  (+5 more)
.gitlab/issue_templates/: bug_report.md  documentation_improvement.md  feature_request.md  submit_question.md
.gitlab/merge_request_templates/: merge_request_template.md
_scratchpad/dlucsanyi/: scratch.py
_scratchpad/hsmit/: scratch.py
blog/: README.md  config.yaml
blog/content/: _index.md
blog/public/: 404.html  index.html  index.xml  sitemap.xml
continuous_integration/: environment.yml  pyxel-1.10-environment.yaml  pyxel-1.10.1-environment.yaml  pyxel-1.10.2-environment.yaml  pyxel-1.11-environment.yaml  pyxel-1.11.1-environment.yaml  pyxel-1.12-environment.yaml  pyxel-1.13-environment.yaml  pyxel-1.13.1-environment.yaml  pyxel-1.14-environment.yaml  pyxel-1.15-environment.yaml  pyxel-1.4-environment.yaml  pyxel-1.5-environment.yaml  pyxel-1.6-environment.yaml  pyxel-1.6.1-environment.yaml  pyxel-1.7-environment.yaml  pyxel-1.8-environment.yaml  pyxel-1.9-environment.yaml  pyxel-1.9.1-environment.yaml  pyxel-2.0-environment.yaml  pyxel-2.1.1-environment.yaml  pyxel-2.2-environment.yaml  pyxel-2.3-environment.yaml  pyxel-2.4-environment.yaml  pyxel-2.4.1-environment.yaml  pyxel-2.5-environment.yaml  pyxel-2.5.1-environment.yaml  pyxel-2.6-environment.yaml  pyxel-2.6.1-environment.yaml  pyxel-2.7-environment.yaml  pyxel-2.8-environment.yaml  pyxel-2.8.1-environment.yaml  pyxel-2.8.2-environment.yaml  requirements-dev.txt
continuous_integration/scripts/: create_json_schema.py  download_last_environment_arctifact.py  download_last_environment_artifact.py  requirements.txt
docs/: Makefile  README.rst  api.rst  docker-howto.md  faq.yml  make.bat  requirements-docs.txt
docs/_static/: redirect.html  switcher.json
docs/questions/: README.md  blankimage.question.md  contact.question.md  darkimage.question.md  detector.question.md  display_all_intermediate_models_run_mode.question.md  installation.question.md  licence.question.md  loadimage.question.md  run.question.md  runningmodes.question.md  simpleyaml.question.md  snr.question.md  versions.question.md
docs/source/: acknowledgement.rst  acronyms.rst  api.rst  conf.py  contributing.rst  data_structure.rst  dataframes.rst  detectors.rst  examples.rst  faq.rst  gui.rst  index.rst  install.rst  license.rst  models.rst  new_model.rst  overview.rst  pipelines.rst  reference.rst  refs.bib  running_modes.rst  yaml.rst
pyxel/: __init__.py  __main__.py  _version.py  ccd.yaml  cmos.yaml  evaluator.py  model_registry.py  model_registry.yaml  models_importer.py  options.py  plot_ptc.py  py.typed  pyxel.py  pyxel_alpha.py  run.py  settings.ini  settings.yaml  settings_ccd.yaml  settings_cmos.yaml  settings_david.yaml  show_versions.py  state.py
pyxel/_scratch/: pyxel_alpha.py
pyxel/backends/: __init__.py  asdf.py  hdf5.py
pyxel/calibration/: __init__.py  algorithm.py  archipelago.py  archipelago_datatree.py  calibration.py  calibration.pyi  fitness.py  fitting.py  fitting_datatree.py  inputdata.py  plotting.py  problem.py  protocols.py  user_defined.py  util.py
pyxel/configuration/: __init__.py  configuration.py
pyxel/data_structure/: __init__.py  array.py  charge.py  image.py  particle.py  persistence.py  phase.py  photon.py  photon3d.py  pixel.py  processed_data.py  scene.py  signal.py  util.py
pyxel/detectors/: MKID_array.py  __init__.py  ccd.py  ccd_characteristics.py  ccd_characteristics.pyi  ccd_geometry.py  characteristics.py  characteristics.pyi  cmos.py  cmos_characteristics.py  cmos_characteristics.pyi  cmos_geometry.py  cmos_geometry.pyi  detector.py  detector.pyi  dynamic_properties.py  environment.py  environment.pyi  geometry.py  geometry.pyi  material.py  material.pyi  mkid.py  mkid_characteristics.py  mkid_geometry.py  optics.py  readout_properties.py  sampling_properties.py
pyxel/dynamic/: __init__.py  dynamic.py
pyxel/exposure/: __init__.py  exposure.py  readout.py
pyxel/inputs/: __init__.py  loader.py
pyxel/inputs_outputs/: __init__.py  calibration_outputs.py  configuration.py  dynamic_outputs.py  image.py  loader.py  object_model.py  observation_outputs.py  outputs.py  parametric_outputs.py  single_outputs.py
pyxel/io/: __init__.py  object_model.py  yaml_processor.py  yaml_processor_new.py
pyxel/models/: __init__.py  ccd_noise.py  charge_injection.py  diffusion.py  diffusion_model.py  full_well.py  photoelectrons.py  photon_generation.py  util.py
pyxel/notebook/: __init__.py  calibration.py  html_representation.py  jupyxel.py
pyxel/observation/: __init__.py  deprecated.py  dynamic.py  misc.py  observation.py  observation_dask.py  parameter_values.py  readout.py  sampling.py
pyxel/outputs/: __init__.py  calibration_outputs.py  exposure_outputs.py  observation_outputs.py  outputs.py  utils.py
pyxel/parametric/: __init__.py  parameter_values.py  parametric.py
pyxel/physics/: __init__.py  array.py  charge.py  image.py  particle.py  photon.py  pixel.py  signal.py
pyxel/pipelines/: __init__.py  ccd_pipeline.py  cmos_pipeline.py  config.py  detection_pipeline.py  detector_pipeline.py  model_function.py  model_group.py  model_registry.py  models.py  parametric.py  pipeline.py  processor.py  validator.py  (+1 more)
scripts/: create_json_schema.py
static/: pyxel_schema.json
test_arcticpy/: Arctic_1.yaml  CDM_1.yaml  benchmark_arcticpy.ipynb  no_cti.yaml  test_arctic.ipynb  test_arctic_pipeline.yaml  testing_arcitc.py
tests/: __init__.py  conftest.py  test_evaluator.py  test_options.py  test_show_versions.py
(+684 files in other folders)
