# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyxel/_version.py
versionfile_build = pyxel/_version.py
tag_prefix =

[metadata]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# and https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = pyxel-sim
description = Pyxel detector simulation framework.
long_description = file: README.md
long_description_content_type = text/markdown
author = The Pyxel development team
author_email = pyxel@esa.int
maintainer = The Pyxel Development Team
maintainer_email = pyxel@esa.int
url = https://esa.gitlab.io/pyxel/
project_urls =
    Documentation = https://esa.gitlab.io/pyxel/doc/
    Source = https://gitlab.com/esa/pyxel
    Tracker = https://gitlab.com/esa/pyxel/issues
license = MIT License
keywords = ESA,data modeling,sensors,calibration,CCD,CMOS,active sensors,electronics

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Physics

platforms = unix, linux, osx, win32

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
setup_requires =
    wheel>=0.29.0
    setuptools>=40.1
install_requires =
; Scientific computing
    numba
    numpy>=1.20
    pandas
    scipy
    xarray>=0.19
; Plotting
    matplotlib>=3.1
    seaborn
    holoviews>=1.14.2
    bokeh
; Parallel computing
    dask
    distributed
; Jupyter notebook
    ipywidgets>=7.5
; Input/Output
    astropy>=4.3
    fsspec[http]>=2021
    h5py
    pyyaml
    xlrd
    openpyxl
    netcdf4
 ; Others
    click
    tqdm
    typing-extensions
    pympler
    pillow
    scikit-image
python_requires = >= 3.7

[options.extras_require]
calibration =
    pygmo>=2.16.1
model =
    poppy>=1.0.2
io =
    asdf
all =
    %(calibration)s
    %(model)s
    %(io)s

[options.package_data]
pyxel_sim = py.typed

[options.entry_points]
console_scripts =
    pyxel = pyxel.run:main

[options.packages.find]
exclude =
    contrib
    docs
    tests
    examples
