# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyxel/_version.py
versionfile_build = pyxel/_version.py
tag_prefix =

[metadata]
platforms = unix, linux, osx, win32

[options]
zip_safe = True
include_package_data = True
packages = find_namespace:

[options.package_data]
pyxel_sim = py.typed

[options.packages.find]
exclude =
    contrib
    docs
    tests
    examples
